projects/examples/source/03.30.cpp
////////////////////////////////////////////////////////////////////

#include <iostream>
#include <utility>

////////////////////////////////////////////////////////////////////

class Entity
{
public :

	Entity(               ) { std::cout << "Entity::Entity (1)\n"; }

	Entity(Entity const & ) { std::cout << "Entity::Entity (2)\n"; }

	Entity(Entity       &&) { std::cout << "Entity::Entity (3)\n"; }
};

////////////////////////////////////////////////////////////////////

auto make_entity_v1() 
{ 
	return Entity(); 
}

////////////////////////////////////////////////////////////////////

auto make_entity_v2() 
{ 
	Entity entity;

//	return std::move(entity); // error
	
	return entity;
}

////////////////////////////////////////////////////////////////////

int main()
{
    [[maybe_unused]] auto entity_1 = make_entity_v1();
	
	[[maybe_unused]] auto entity_2 = make_entity_v2();
}

////////////////////////////////////////////////////////////////////